--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <div class="container">
           <div class="slider-wrapper" tabindex="0">
             <div class="item">
-              <img :src="slides[0].image" />
+              <img :src="slides[activeSlide].image" />
               <div class="text">
-                <h3>{{slides[0].title}}</h3>
-                <p>{{slides[0].text}}</p>
+                <h3>{{slides[activeSlide].title}}</h3>
+                <p>{{slides[activeSlide].text}}</p>
               </div>
             </div>
 
             <div class="thumbs">
-              <div class="prev"></div>
-              <div class="next"></div>
+              <div @click="goPrev " class="prev"></div>
+              <div @click="goNext " class="next"></div>
               <div class="thumb active">
                 <img src="img/01.webp" alt="Svezia" />
               </div>
