--- a/index.html
+++ b/index.html
@@ -46,20 +46,12 @@
             <div class="thumbs">
               <div @click="goPrev " class="prev"></div>
               <div @click="goNext " class="next"></div>
-              <div class="thumb active">
-                <img src="img/01.webp" alt="Svezia" />
-              </div>
-              <div class="thumb">
-                <img src="img/02.webp" alt="Ratchet & Clank" />
-              </div>
-              <div class="thumb">
-                <img src="img/03.webp" alt="Fortnite" />
-              </div>
-              <div class="thumb">
-                <img src="img/04.webp" alt="Stray" />
-              </div>
-              <div class="thumb">
-                <img src="img/05.webp" alt="Avengers" />
+              <div
+                v-for="(thumb,index) in slides "
+                class="thumb"
+                :class="(index==activeSlide) ? 'active' : ''"
+              >
+                <img :src="thumb.image" />
               </div>
             </div>
           </div>
